# Automated-Tea-Brewer

./: .gitmodules  README.md
models/: Spacer.stl  (+13 more)
src/tea-brewer-controller/main/: CMakeLists.txt  idf_component.yml  main.c  main_pins.h  scheduler.c  scheduler.h
src/tea-brewer-controller/main/console/: console.c  console.h  uart_comm.c  uart_comm.h
src/tea-brewer-controller/main/distance_sensor/: distance_sensor.c  distance_sensor.h
src/tea-brewer-controller/main/motor/: motor_control.c  motor_control.h  tmc2130.c  tmc2130.h
src/tea-brewer-controller/main/pot_sensor/: pot_sensor.c  pot_sensor.h
src/tea-brewer-controller/main/protocol/: protocol.c  protocol.h
src/tea-brewer-controller/main/rtc/: rtc.c  rtc.h
src/tea-brewer-controller/main/temperature_sensor/: thermometer.c  thermometer.h
src/tea-brewer/main/: CMakeLists.txt  app_main.c  idf_component.yml  settings.c  settings.h  uart_api.c  uart_api.h  uart_comm.c  uart_comm.h  webserver.c  webserver.h
src/tea-brewer/main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_themes.c  ui_themes.h
src/tea-brewer/main/ui/fonts/: ui_font_ConcertOneRegular18.c  ui_font_ConcertOneRegular46.c
src/tea-brewer/main/ui/images/: ui_img_1134812263.c  ui_img_191910993.c  ui_img_2046542749.c  ui_img_231652102.c  ui_img_287775719.c  ui_img_500202543.c  ui_img_726548789.c  ui_img_909358264.c  ui_img_blackteascreen_png.c  ui_img_fruitteascreen_png.c  ui_img_functionalteascreen_png.c  ui_img_greenteascreen_png.c  ui_img_herbalteascreen_png.c  ui_img_teapot_png.c  ui_img_title_png.c  (+1 more)
(+77 files in other folders)
