idf_component_register(SRC_DIRS
                    "."
                    "ui/components"
                    "ui/images"
                    "ui/screens"
                    "ui"
                    INCLUDE_DIRS
                    "."
                    REQUIRES
                    bsp
                    espressif__esp_lcd_touch_cst816s
                    nvs_flash
                    esp_http_server
                    json
                    driver
                    freertos
                    esp_common)